--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1202,3 +1202,10 @@
     -webkit-appearance: menulist;
 }
 
+.rotate-icon {
+    transition: transform 0.5s ease-in-out;
+}
+
+.rotate-icon.rotate {
+    transform: rotate(-180deg); /* Adjust the angle as needed */
+}
