--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -331,6 +331,15 @@
 </div>
 <!-- add issue modal end -->
 
+<script>
+    function rotateIcon(element) {
+        // Get the icon element
+        const icon = element.querySelector('.rotate-icon');
+
+        // Toggle the 'rotate' class to apply or remove rotation
+        icon.classList.toggle('rotate');
+    }
+</script>
 
 
 <!--    issue detail modal start-->
@@ -347,85 +356,95 @@
                 <div class="container-fluid">
                     <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-1 row-cols-xl-1 row-cols-xxl-1 gap-2">
 
-                        <h6 data-toggle="collapse" href="#details"><i class="fas fa-chevron-circle-down"></i>  Details</h6>
-                        <div id="details" class="collapse">
+                        <h6 data-toggle="collapse" href="#peoples" onclick="rotateIcon(this)"><i class="fas fa-chevron-circle-down rotate-icon"></i> People</h6>
+
+                        <div id="peoples" class="accordion-collapse collapse accordion-body">
+                            <div class="col mb-3 ">
+                                <h6>Uploader:</h6>
+                                <p class=""  id="uploaderDetails"></p>
+                            </div>
+                            <div  class="col mb-3 ">
+                                <h6>Person In Charge:</h6>
+                                <p class="" id="picDetails"></p>
+
+                            </div>
+                            <div  class="col mb-3 ">
+                                <h6>Responsible Party:</h6>
+                                <p class="" id="rpDetails"></p>
+                            </div>
+                        </div>
+
+                        <h6 data-toggle="collapse" href="#solution-detail" onclick="rotateIcon(this)"><i class="fas fa-chevron-circle-down rotate-icon"></i>  Solution</h6>
+                        <div id="solution-detail" class="accordion-collapse collapse accordion-body">
                             <div class="col mb-3">
 
-                                <span class="d-flex custom-issue-margin"><h6 >Title:</h6><p class="icon-title col-6 text-center" id="issueTitleDetails"></p></span>
+                                <h6 >Corrective Action :</h6>
+                                <p class="" id="correctiveDetails"></p>
 
                             </div>
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Category:</h6><p class="icon-title badge bg-secondary issue_details_margin" id="issue_categoryDetails"></p></span>
-
-                            </div>
-
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Direct Cause:</h6><p class="icon-title col-4 text-center" id="direct_causeDetails"></p></span>
-
-                            </div>
-
                             <div class="col mb-3">
-                                <span class="d-flex custom-issue-margin"><h6 >Root Cause:</h6><p class="icon-title col-4 text-center" id="root_causeDetails"></p></span>
 
-                            </div>
-
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Place:</h6><p class="icon-title col-6 text-center" id="placeDetails"></p></span>
-
-                            </div>
-
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Impact:</h6><p class="icon-title col-lg-6 text-center" id="impactDetails"></p></span>
-
-                            </div>
-
-                            <div class="col mb-3">
-                                <span class="d-flex custom-issue-margin"><h6>Corrective Action:</h6><p class="icon-title col-4 text-center" id="correctiveDetails"></p></span>
-
-                            </div>
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Preventive Action:</h6><p class="icon-title col-4 text-center" id="preventiveDetails"></p></span>
-
-                            </div>
-
-                            <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Solved Date:</h6><p class="icon-title col-6 text-center" id="solveDateDetails"></p></span>
+                                <h6 >Preventive Action :</h6>
+                                <p class="" id="preventiveDetails"></p>
 
                             </div>
                         </div>
 
+                        <h6 data-toggle="collapse" href="#details" onclick="rotateIcon(this)"><i class="fas fa-chevron-circle-down rotate-icon"></i>  Details</h6>
+                        <div id="details" class="accordion-collapse collapse accordion-body">
+                            <div class="col mb-3">
 
-                        <h6 data-toggle="collapse" href="#peoples"><i class="fas fa-chevron-circle-down"></i> People</h6>
+                                <label for="issueTitleDetails" >Title:</label>
+                                <input type="text" class="form-control" id="issueTitleDetails"/>
 
-                        <div id="peoples" class="collapse">
+                            </div>
                             <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Uploader:</h6><p class="icon-title col-6 text-center"  id="uploaderDetails"></p></span>
+                                <label for="issue_categoryDetails">Category:</label>
+                                <select id="issue_categoryDetails" class="form-control me-2">
+                                    <option value="ERROR">ERROR</option>
+                                    <option value="BUG">BUG</option>
+                                    <option value="COMMUNICATION">COMMUNICATION</option>
+                                    <option value="TECHNICAL">TECHNICAL</option>
+                                    <option value="BUDGET">BUDGET</option>
+                                    <option value="DESIGN">DESIGN</option>
+                                    <option value="TESTING">TESTING</option>
+                                </select>
+                            </div>
+
+                            <div class="col mb-3 ">
+                                <label for="direct_causeDetails">Direct Cause:</label>
+                                <textarea class="form-control" id="direct_causeDetails"></textarea>
 
                             </div>
-                            <div  class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Person In Charge:</h6><p class="icon-title col-4 text-center" id="picDetails"></p></span>
+
+                            <div class="col mb-3">
+                                <label for="root_causeDetails">Root Cause:</label>
+                                <textarea class="form-control" id="root_causeDetails"></textarea>
 
                             </div>
-                            <div  class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Responsible Party:</h6><p class="icon-title col-6 text-center" id="rpDetails"></p></span>
 
+                            <div class="col mb-3 ">
+                                <label for="placeDetails">Place:</label>
+                                <textarea class="form-control" id="placeDetails"></textarea>
+
+                            </div>
+
+                            <div class="col mb-3 ">
+
+                                <label for="impactDetails">Impact:</label>
+                                <textarea class="form-control" id="impactDetails"></textarea>
+
+                            </div>
+
+                            <div class="col mb-3 ">
+                                <h6>Created Date:</h6>
+                                <p id="solveDateDetails"></p>
                             </div>
                         </div>
 
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingOne">
-
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                        <h6><i class="fas fa-chevron-circle-down"></i>Description</h6>
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"  data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body" id="descriptionDetails"></div>
-                                </div>
-                            </div>
-                            <div class="col mb-3">
-                            </div>
+                        <h6 data-toggle="collapse" href="#issue-detail-description" onclick="rotateIcon(this)"><i class="fas fa-chevron-circle-down rotate-icon"></i>Description</h6>
+                        <div id="issue-detail-description" class="accordion-collapse collapse">
+                            <div class="accordion-body" id="descriptionDetails"></div>
                         </div>
                     </div>
                 </div>
@@ -484,6 +503,9 @@
     $(document).ready(function () {
         setupLogoutConfirmation();
     });
+
+
+
     // Author: Habib Mhamadi
     // Email: habibmhamadi@gmail.comd
     function getTimeAgo(timestamp) {
@@ -881,12 +903,9 @@
                                 });
                             });
 
-                            $('#sort').on('click', '.issueDetails', function () {
+                            $('.tab-content').on('click', '.issueDetails', function () {
 
                                 console.log("click on issueDetails ")
-
-                                $('#details').collapse('show');
-                                $('#peoples').collapse('show');
 
                                 // Get the issue ID directly from the button's data-id attribute
                                 const issueId = $(this).data('id'); // Use $(this) instead of $('#issue-edit-btn')
@@ -899,21 +918,41 @@
                                     success: function (data) {
                                         console.log('Data received:', data);
                                         if (data) {
-                                            $('#issueTitleDetails').text(data.title);
-                                            $('#issue_categoryDetails').text(data.issueCategory);
+                                            $('#issueTitleDetails').val(data.title);
+                                            $('#issue_categoryDetails').val(data.issueCategory);
                                             $('#uploaderDetails').text(data.user_uploader.name);
                                             $('#picDetails').text(data.user_pic.name);
                                             $('#rpDetails').text(data.responsible_party.name);
-                                            $('#descriptionDetails').html(data.description);
-                                            $('#direct_causeDetails').text(data.direct_cause);
-                                            $('#root_causeDetails').text(data.root_cause);
-                                            $('#placeDetails').text(data.place);
-                                            $('#impactDetails').text(data.impact);
+                                            const issueDetail = new Quill(document.querySelector('#descriptionDetails'), {
+                                                modules: {
+                                                    toolbar: toolbaroptions,
+                                                },
+                                                theme: 'bubble',
+                                            });
+                                            issueDetail.root.innerHTML = '';
+                                            issueDetail.clipboard.dangerouslyPasteHTML(
+                                                0,
+                                                data.description
+                                            );
+                                            $('#direct_causeDetails').val(data.direct_cause);
+                                            $('#root_causeDetails').val(data.root_cause);
+                                            $('#placeDetails').val(data.place);
+                                            $('#impactDetails').val(data.impact);
                                             $('#correctiveDetails').text(data.corrective_action);
                                             $('#preventiveDetails').text(data.preventive_action);
-                                            $('#solveDateDetails').text(formatDate(data.solved_date));
+                                            $('#solveDateDetails').text(formatDate(data.created_date));
                                             $('#issue-edit-btn').data('issueId', issueId); // Set the issueId
                                             $('#issueDetailsModal').modal('show');
+                                            if(getLoginUser.currentUser.id !== data.user_uploader.id){
+                                                $('#issueTitleDetails').prop('disabled', true);
+                                                $('#issue_categoryDetails').prop('disabled', true);
+                                                $('#descriptionDetails').prop('disabled', true);
+                                                $('#direct_causeDetails').prop('disabled', true);
+                                                $('#root_causeDetails').prop('disabled', true);
+                                                $('#placeDetails').prop('disabled', true);
+                                                $('#impactDetails').prop('disabled', true);
+                                                issueDetail.enable(false)
+                                            }
                                         } else {
                                             console.log('No data received for issue ID:', issueId);
                                         }
