fixed error in updating the existing issue

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1209,3 +1209,11 @@
 .rotate-icon.rotate {
     transform: rotate(-180deg); /* Adjust the angle as needed */
 }
+
+.ql-container {
+    padding: 0 !important;
+}
+
+.ql-editor {
+    padding: 10px !important;
+}
