--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -254,7 +254,7 @@
                         <label for="issue_category" class="col-sm-12 col-form-label" name="issueCategory">Issue Category<span
                                 style="color:red"> *</span></label>
                         <select class="form-select border-task-description" name="issue_category" id="issue_category" >
-                            <option selected>Select Issue Category</option>
+                            <option value="" disabled selected>Select Issue Category</option>
                             <option value="ERROR">Error</option>
                             <option value="BUG">Bug</option>
                             <option value="COMMUNICATION">Communication</option>
